--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -13,6 +13,21 @@ env:
   ARTIFACT_RETENTION_DAYS: 7
 
 jobs:
+  create-version:
+    runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.create_version.outputs.version }}
+    steps:
+      - id: create_version
+        name: Create version string
+        run: |
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "master" ] && VERSION=latest
+
+          echo "::set-output name=version::${VERSION}"
 
   test-batch-predictor:
     runs-on: ubuntu-latest
@@ -188,6 +203,7 @@ jobs:
           - 5432:5432
     needs:
     - build-ui
+    - create-version
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -213,48 +229,54 @@ jobs:
           name: merlin-ui-dist
           path: ui/build
       - name: Build API Docker
-        run: docker build -t merlin-api:${GITHUB_REF_NAME} -f Dockerfile .
+        run: docker build -t merlin-api:${{ needs.create-version.outputs.version }} -f Dockerfile .
       - name: Save API Docker
-        run: docker image save --output merlin-api.${GITHUB_REF_NAME}.tar merlin-api:${GITHUB_REF_NAME}
+        run: docker image save --output merlin-api.${{ needs.create-version.outputs.version }}.tar merlin-api:${{ needs.create-version.outputs.version }}
       - name: Publish API Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-api.${{ env.GITHUB_REF_NAME }}.tar
-          path: merlin-api.${{ env.GITHUB_REF_NAME }}.tar
+          name: merlin-api.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-api.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-batch-predictor:
     runs-on: ubuntu-latest
+    needs:
+      - create-version
     steps:
       - uses: actions/checkout@v2
       - name: Build Batch Predictor Docker
-        run: docker build -t merlin-pyspark-base:${{ env.GITHUB_REF_NAME }} -f python/batch-predictor/docker/base.Dockerfile python
+        run: docker build -t merlin-pyspark-base:${{ needs.create-version.outputs.version }} -f python/batch-predictor/docker/base.Dockerfile python
       - name: Save Batch Predictor Docker
-        run: docker image save --output merlin-pyspark-base.${{ env.GITHUB_REF_NAME }}.tar merlin-pyspark-base:${{ env.GITHUB_REF_NAME }}
+        run: docker image save --output merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar merlin-pyspark-base:${{ needs.create-version.outputs.version }}
       - name: Publish Batch Predictor Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-pyspark-base.${{ env.GITHUB_REF_NAME }}.tar
-          path: merlin-pyspark-base.${{ env.GITHUB_REF_NAME }}.tar
+          name: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-pyfunc-server:
     runs-on: ubuntu-latest
+    needs:
+      - create-version
     steps:
       - uses: actions/checkout@v2
       - name: Build Pyfunc Server Docker
-        run: docker build -t merlin-pyfunc-base:${{ env.GITHUB_REF_NAME }} -f python/pyfunc-server/base.Dockerfile python
+        run: docker build -t merlin-pyfunc-base:${{ needs.create-version.outputs.version }} -f python/pyfunc-server/base.Dockerfile python
       - name: Save Pyfunc Server Docker
-        run: docker image save --output merlin-pyfunc-base.${{ env.GITHUB_REF_NAME }}.tar merlin-pyfunc-base:${{ env.GITHUB_REF_NAME }}
+        run: docker image save --output merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar merlin-pyfunc-base:${{ needs.create-version.outputs.version }}
       - name: Publish Pyfunc Server Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-pyfunc-base.${{ env.GITHUB_REF_NAME }}.tar
-          path: merlin-pyfunc-base.${{ env.GITHUB_REF_NAME }}.tar
+          name: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build-transformer:
     runs-on: ubuntu-latest
+    needs:
+      - create-version
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
@@ -273,23 +295,24 @@ jobs:
       - name: Build Standard Transformer
         run: make build-transformer
       - name: Build Standard Transformer Docker
-        run: docker build -t merlin-transformer:${{ env.GITHUB_REF_NAME }} -f transformer.Dockerfile .
+        run: docker build -t merlin-transformer:${{ needs.create-version.outputs.version }} -f transformer.Dockerfile .
       - name: Save Standard Transformer Docker
-        run: docker image save --output merlin-transformer.${{ env.GITHUB_REF_NAME }}.tar merlin-transformer:${{ env.GITHUB_REF_NAME }}
+        run: docker image save --output merlin-transformer.${{ needs.create-version.outputs.version }}.tar merlin-transformer:${{ needs.create-version.outputs.version }}
       - name: Publish Standard Transformer Docker Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: merlin-transformer.${{ env.GITHUB_REF_NAME }}.tar
-          path: merlin-transformer.${{ env.GITHUB_REF_NAME }}.tar
+          name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
+          path: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   e2e-test:
     runs-on: ubuntu-latest
     needs: 
-    - build-api
-    - build-batch-predictor
-    - build-pyfunc-server
-    - build-transformer
+      - build-api
+      - build-batch-predictor
+      - build-pyfunc-server
+      - build-transformer
+      - create-version
     env:
       LOCAL_REGISTRY: registry.localhost:5000
     steps:
@@ -302,55 +325,53 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.7
-      - name: Get branch name
-        run: echo "branch_name=$(echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/*/}} | tr / -)" >> $GITHUB_ENV
       - name: Download API Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-api.${{ env.GITHUB_REF_NAME }}.tar
+          name: merlin-api.${{ needs.create-version.outputs.version }}.tar
       - name: Download Batch Predictor Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyspark-base.${{ env.GITHUB_REF_NAME }}.tar
+          name: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
       - name: Download Pyfunc Server Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-pyfunc-base.${{ env.GITHUB_REF_NAME }}.tar
+          name: merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
       - name: Download Standard Transformer Docker Artifact
         uses: actions/download-artifact@v2
         with:
-          name: merlin-transformer.${{ env.GITHUB_REF_NAME }}.tar
+          name: merlin-transformer.${{ needs.create-version.outputs.version }}.tar
       - name: Publish images to local registry
         env:
           DOCKER_REPOSITORY: ${{ env.LOCAL_REGISTRY }}/${{ github.repository }}
         run: |
           # Merlin API
-          docker image load --input merlin-api.${{ env.GITHUB_REF_NAME }}.tar
+          docker image load --input merlin-api.${{ needs.create-version.outputs.version }}.tar
           docker tag \
-            merlin-api:${{ env.GITHUB_REF_NAME }} \
-            ${{ env.DOCKER_REPOSITORY }}/merlin-api:${{ env.GITHUB_REF_NAME }}
-          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-api:${{ env.GITHUB_REF_NAME }}
+            merlin-api:${{ needs.create-version.outputs.version }} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-api:${{ needs.create-version.outputs.version }}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-api:${{ needs.create-version.outputs.version }}
 
           # Batch Predictor
-          docker image load --input merlin-pyspark-base.${{ env.GITHUB_REF_NAME }}.tar
+          docker image load --input merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
           docker tag \
-             merlin-pyspark-base:${{ env.GITHUB_REF_NAME }} \
-            ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${{ env.GITHUB_REF_NAME }}
-          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${{ env.GITHUB_REF_NAME }}
+             merlin-pyspark-base:${{ needs.create-version.outputs.version }} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${{ needs.create-version.outputs.version }}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyspark-base:${{ needs.create-version.outputs.version }}
           
           # Pyfunc Server
-          docker image load --input merlin-pyfunc-base.${{ env.GITHUB_REF_NAME }}.tar
+          docker image load --input merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar
           docker tag \
-            merlin-pyfunc-base:${{ env.GITHUB_REF_NAME }} \
-            ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${{ env.GITHUB_REF_NAME }}
-          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${{ env.GITHUB_REF_NAME }}
+            merlin-pyfunc-base:${{ needs.create-version.outputs.version }} \
+            ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${{ needs.create-version.outputs.version }}
+          docker push ${{ env.DOCKER_REPOSITORY }}/merlin-pyfunc-base:${{ needs.create-version.outputs.version }}
 
           # Standard Transformer
-          docker image load --input  merlin-transformer.${{ env.GITHUB_REF_NAME }}.tar
+          docker image load --input  merlin-transformer.${{ needs.create-version.outputs.version }}.tar
           docker tag \
-             merlin-transformer:${{ env.GITHUB_REF_NAME }} \
-            ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${{ env.GITHUB_REF_NAME }}
-          docker push ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${{ env.GITHUB_REF_NAME }}
+             merlin-transformer:${{ needs.create-version.outputs.version }} \
+            ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${{ needs.create-version.outputs.version }}
+          docker push ${{ env.DOCKER_REPOSITORY }}/ merlin-transformer:${{ needs.create-version.outputs.version }}
       - uses: AbsaOSS/k3d-action@v2
         name: "Create Test Cluster"
         with:
