--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -23,11 +23,11 @@ jobs:
             owner: 'caraml-dev',
             repo: 'docs',
             workflow_id: 'pull_docs.yml',
-            ref: 'main'
+            ref: 'main',
             inputs: {
               module: 'model'
               git-https: 'https://github.com/gojek/merlin.git'
               doc-folder: 'docs'
               branch: 'main'
-            }
+            },
           })
