--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -25,9 +25,9 @@ jobs:
             workflow_id: 'pull_docs.yml',
             ref: 'main',
             inputs: {
-              module: 'model'
-              git-https: 'https://github.com/gojek/merlin.git'
-              doc-folder: 'docs'
-              branch: 'main'
+              module: 'model',
+              git-https: 'https://github.com/gojek/merlin.git',
+              doc-folder: 'docs',
+              branch: 'main',
             },
           })
