--- a/charts/merlin/templates/merlin-service.yaml
+++ b/charts/merlin/templates/merlin-service.yaml
@@ -6,20 +6,15 @@ metadata:
   labels:
     app: {{ include "merlin.name" . }}
     release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
     helm.sh/chart: {{ include "merlin.chart" . }}
     app.kubernetes.io/name: {{ include "merlin.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}
-    gojek.com/app: merlin
-    gojek.com/team: dsp
-    gojek.com/stream: dsp
-    gojek.com/orchestrator: gitlab
-    gojek.com/environment: {{ .Values.merlin.environment }}
 spec:
   type: ClusterIP
   ports:
-    - port: {{ .Values.merlin.service.externalPort }}
+    - name: http
+      port: {{ .Values.merlin.service.externalPort }}
       targetPort: {{ .Values.merlin.service.internalPort }}
       protocol: TCP
   selector:
