--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -31,7 +31,7 @@ jobs:
     #           branch: 'main',
     #         },
     #       })
-    uses: caraml/docs/.github/workflows/pull_docs.yml@master
+    uses: caraml-dev/docs/.github/workflows/pull_docs.yml@master
     secrets:
       github-token: ${{ secrets.CARAML_SYNC }}
     with:
