--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -33,9 +33,10 @@ jobs:
     #       })
     name: Pull Docs CI
     uses: caraml-dev/docs/.github/workflows/trigger-pull-docs.yml@main
+    secrets:
+      CARAML_SYNC: ${{ secrets.CARAML_SYNC }}
     with:
       module: 'model'
       git_https: 'https://github.com/gojek/merlin.git'
       doc_folder: 'docs'
       branch: 'main'
-      token: ${{ secrets.CARAML_SYNC }}
