--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Remote Doc Pull Workflow
-        uses: caraml-dev/docs/.github/actions/trigger-pull-docs.yml@sync-action
+        uses: caraml-dev/docs/.github/actions/trigger-pull-docs@sync-action
         with:
           module: 'model'
           git_https: 'https://github.com/gojek/merlin.git'
