--- a/charts/merlin/templates/mlflow-deployment.yaml
+++ b/charts/merlin/templates/mlflow-deployment.yaml
@@ -29,9 +29,9 @@ spec:
       labels:
         app: {{ template "mlflow.fullname" . }}
         release: {{ .Release.Name }}
-      {{- if .Values.mlflow.podLabels}}
-        {{ toYaml .Values.mlflow.podLabels | nindent 8 }}
-      {{- end}}
+        {{- if .Values.mlflow.podLabels }}
+          {{- toYaml .Values.mlflow.podLabels | nindent 8 }}
+        {{- end }}
     spec:
       containers:
       - name: {{ template "mlflow.fullname" . }}
