update choice of branch to sync from to be based on github.ref

--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -20,5 +20,5 @@ jobs:
           module: 'model'
           git_https: 'https://github.com/gojek/merlin.git'
           doc_folder: 'docs'
-          branch: 'main'
+          branch: ${{ github.ref }}
           credentials: ${{ secrets.CARAML_SYNC }}
