update to test tag/branch

--- a/.github/workflows/trigger-caraml-doc-sync.yml
+++ b/.github/workflows/trigger-caraml-doc-sync.yml
@@ -20,5 +20,6 @@ jobs:
           module: 'model'
           git_https: 'https://github.com/gojek/merlin.git'
           doc_folder: 'docs'
-          branch: ${{ github.sha }}
+          ref_name: ${{ github.ref_name }}
+          ref_type: ${{ github.ref_type }}
           credentials: ${{ secrets.CARAML_SYNC }}
