--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -1,4 +1,3 @@
-kfserving==0.2.1.1
 argparse>=1.4.0
 numpy >= 1.8.2
 mlflow==1.6.0
@@ -6,4 +5,5 @@ cloudpickle==2.0.0
 prometheus_client==0.7.1
 uvloop>=0.15.2
 orjson==2.6.8
+caraml-upi-protos
 file:../sdk#egg=merlin-sdk
