--- a/python/pyfunc-server/.gitignore
+++ b/python/pyfunc-server/.gitignore
@@ -1,3 +1,5 @@
+artifacts/
+prometheus_multiproc_dir/
 model/
 mlruns/
 # Created by https://www.gitignore.io/api/python,pycharm
@@ -165,5 +167,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# prometheus
+**/*.db
 
 # End of https://www.gitignore.io/api/python,pycharm
