--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -1,9 +1,10 @@
-kfserving==0.2.1.1
 argparse>=1.4.0
 numpy >= 1.8.2
-mlflow==1.6.0
 cloudpickle==2.0.0
-prometheus_client==0.7.1
+prometheus_client==0.14.1
 uvloop>=0.15.2
 orjson==2.6.8
+tornado
+caraml-upi-protos
+grpcio-reflection
 file:../sdk#egg=merlin-sdk
