--- a/ui/package.json
+++ b/ui/package.json
@@ -4,36 +4,45 @@
   "private": true,
   "homepage": "/merlin",
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@elastic/datemath": "5.0.3",
-    "@elastic/eui": "32.3.0",
-    "@gojek/mlp-ui": "1.4.4",
-    "@reach/router": "1.3.3",
+    "@elastic/eui": "64.0.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/cache": "11.10.3",
+    "eslint": "^8.1.0",
+    "@gojek/mlp-ui": "1.6.1",
+    "@reach/router": "1.3.4",
     "@sentry/browser": "5.15.5",
     "dagre": "^0.8.5",
     "dagre-d3-react": "^0.2.4",
-    "js-yaml": "^4.0.0",
-    "moment": "2.25.3",
-    "node-sass": "^4.14.1",
+    "js-yaml": "^4.1.0",
+    "moment": "2.29.4",
+    "monaco-editor": "0.34.0",
+    "@monaco-editor/react": "4.4.5",
+    "node-sass": "^7.0.3",
     "object-assign-deep": "0.4.0",
     "proper-url-join": "^2.1.1",
-    "react": "16.13.1",
+    "react": "^17.0.2",
     "react-collapsed": "^3.0.1",
-    "react-dom": "16.13.1",
+    "react-dom": "^17.0.2",
     "react-ellipsis-text": "^1.2.1",
-    "react-flow-renderer": "10.3.4",
+    "react-flow-renderer": "10.3.17",
     "react-lazylog": "git+https://github.com/gojekfarm/react-lazylog.git#e3a7f026983df0dc59d25843fe87ce7e37e24e82",
-    "react-scripts": "3.4.1",
-    "use-query-params": "^0.6.0",
-    "yup": "^0.29.1"
+    "react-scripts": "^5.0.1",
+    "@types/react": "^17.0.0",
+    "use-query-params": "^2.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/react-dom": "^16.9.8",
-    "eslint-plugin-flowtype": "^3.13.0",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "prop-types": "^15.7.2",
-    "typescript": "^3.9.2"
+    "@types/react-dom": "^17.0.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "prop-types": "^15.8.1",
+    "typescript": "4.5.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
