--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@babel/runtime": "7.19.0",
     "dagre": "^0.8.5",
     "dagre-d3-react": "^0.2.4",
     "@elastic/datemath": "5.0.3",
