--- a/examples/batch/env.yaml
+++ b/examples/batch/env.yaml
@@ -1,6 +1,6 @@
 dependencies:
 - pip:
-    - joblib==0.13.0
+    - joblib>=1.2.0
     - numpy==1.19.5
     - scikit-learn==0.23.1
     - xgboost==0.82
