--- a/python/sdk/test/batch/model/env.yaml
+++ b/python/sdk/test/batch/model/env.yaml
@@ -2,7 +2,7 @@ dependencies:
   - pip:
       - mlflow==1.20.0
       - scikit-learn==0.20.3
-      - joblib==0.13.0
+      - joblib>=1.2.0
       - numpy==1.19.5 # https://github.com/Azure/MachineLearningNotebooks/issues/1314
       - pandas==0.25.3
       - pytest
