--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -6,5 +6,8 @@ uvloop>=0.15.2
 orjson==2.6.8
 tornado
 caraml-upi-protos
-grpcio-reflection
+# Starting 1.49.0, grpc uses protobuf 4.X which are incompatible with most of our dependencies
+grpcio<1.49.0
+grpcio-reflection<1.49.0
+grpcio-tools<1.49.0
 file:../sdk#egg=merlin-sdk
