--- a/examples/xgboost/requirements.txt
+++ b/examples/xgboost/requirements.txt
@@ -1,4 +1,4 @@
-scikit-learn
-xgboost==0.82
+scikit-learn==1.0.1  # >=1.1.2 upon python 3.7 deprecation-learn
+xgboost==1.6.2
 merlin-sdk
 cloudpickle==2.0.0
